--- a/src/assets/css/argon.css
+++ b/src/assets/css/argon.css
@@ -16905,7 +16905,7 @@ textarea[resize='horizontal'] {
 }
 
 .icon-lg+.icon-text {
-    width: calc(100% - $icon-size-lg - 1);
+    width: calc(100% - icon-size-lg - 1);
 }
 
 .icon-sm {
@@ -16919,7 +16919,7 @@ textarea[resize='horizontal'] {
 }
 
 .icon-sm+.icon-text {
-    width: calc(100% - $icon-size-sm - 1);
+    width: calc(100% - icon-size-sm - 1);
 }
 
 .icon-xs {
@@ -16933,7 +16933,7 @@ textarea[resize='horizontal'] {
 }
 
 .icon-xs+.icon-text {
-    width: calc(100% - $icon-size-xs - 1);
+    width: calc(100% - icon-size-xs - 1);
 }
 
 .icon-actions>a {
