--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -56,7 +56,7 @@ rojo: #B0252A -->
                     <div class="card bg-secondary border-0 mb-0 ">
                         <div class="card-body px-lg-5 py-lg-5 ">
                             <div class="text-center text-muted mb-4 ">
-                                <img src="../../assets/img/logo.png " width="110 " height="90 ">
+                                <img src="assets/img/logo.png " width="110 " height="90 ">
                             </div>
                             <form role="form" #forma="ngForm" id="formLogin" (ngSubmit)="login(forma);">
                                 <div class="form-group mb-3 ">
