--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Search form -->
             <form class="navbar-search navbar-search-dark form-inline mr-sm-3" id="navbar-search-main">
-                <h2>Administración</h2>
+                <h2>Administración y Mantenimiento</h2>
             </form>
             <!-- Navbar links -->
             <ul class="navbar-nav align-items-center  ml-md-auto ">
