--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
             <a class="navbar-brand" href="javascript:void(0)">
                 <img src="assets/img/logo.png" class="navbar-brand-img" width="180" height="300">
             </a>
-            <!-- <div class=" ml-auto ">
+            <div class=" ml-auto ">
                 <div class="sidenav-toggler d-none d-xl-block" data-target="#sidenav-main">
                     <div class="sidenav-toggler-inner">
                         <i class="sidenav-toggler-line"></i>
@@ -13,7 +13,7 @@
                         <i class="sidenav-toggler-line"></i>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
         <div class="navbar-inner">
             <!-- Collapse -->
@@ -21,26 +21,38 @@
                 <!-- Nav items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/empresa">
+                        <a class="nav-link" routerLinkActive="active" routerLink="/productos">
                             <i class="ni ni-shop text-primary"></i>
                             <span class="nav-link-text">Productos</span>
                         </a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/presentacion">
-                            <i class="ni ni-ungroup text-orange"></i>
-                            <span class="nav-link-text">Presentación</span>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#navbar-dashboards" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="navbar-dashboards">
+                            <i class="ni ni-shop text-primary"></i>
+                            <span class="nav-link-text">Categorías</span>
                         </a>
+                        <div class="collapse" id="navbar-dashboards" style="padding-left: 35px;">
+                            <ul class="nav nav-sm flex-column">
+                                <li class="nav-item">
+                                    <a routerLink="/categoria" routerLinkActive="active" class="nav-link">
+                                        <span class="sidenav-normal"> Categorías </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a routerLink="/subcategoria" routerLinkActive="active" class="nav-link">
+                                        <span class="sidenav-normal"> Subcategorías </span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/formaPago">
-                            <i class="ni ni-ui-04 text-info"></i>
-                            <span class="nav-link-text">Formas Pago</span>
+                        <a class="nav-link" routerLinkActive="active" routerLink="/proveedor">
+                            <i class="ni ni-shop text-primary"></i>
+                            <span class="nav-link-text">Proveedores</span>
                         </a>
-                    </li> -->
-
+                    </li>
                 </ul>
-
             </div>
         </div>
     </div>
